--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -847,13 +847,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
-    "\n",
-    "### 🔍 Observations:\n",
-    "\n",
-    "- 📊 **There are 2240 rows and 29 columns** in our data.\n",
-    "- 📁 **Only 3 columns are of object type**.\n",
-    "\n",
+    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em; border: 2px solid white;\">\n",
+    "    <h3>🔍 Observations:</h3>\n",
+    "    <ul>\n",
+    "        <li>📊 <strong>There are 2240 rows and 29 columns</strong> in our data.</li>\n",
+    "        <li>📁 <strong>Only 3 columns are of object type</strong>.</li>\n",
+    "    </ul>\n",
     "</div>\n"
    ]
   },
