--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -12062,7 +12062,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
+    "<div style=\"border: 2px solid #E0E0E0; border-radius: 10px; padding: 15px; color: #E0E0E0; font-size: 1em;\">\n",
     "\n",
     "### Project Summary: Unsupervised Clustering Analysis\n",
     "\n",
