--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -12062,7 +12062,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 2px solid #E0E0E0; border-radius: 10px; padding: 15px; color: #E0E0E0;\">\n",
+    "<div style=\"border: 2px solid #4CAF50; border-radius: 10px; padding: 15px;\">\n",
     "\n",
     "### Project Summary: Unsupervised Clustering Analysis\n",
     "\n",
