--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -98,11 +98,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">📚</span> 1. Import Necessary Libraries\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold;\">\n",
+    "    📚 1. Import Necessary Libraries\n",
+    "</h2>\n"
    ]
   },
   {
@@ -847,7 +845,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em; border: 2px solid white;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;;\">\n",
     "    <h3>🔍 Observations:</h3>\n",
     "    <ul>\n",
     "        <li>📊 <strong>There are 2240 rows and 29 columns</strong> in our data.</li>\n",
@@ -860,11 +858,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">🧹</span> 2. Data Cleaning\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    🧹 2. Data Cleaning\n",
+    "</h2>\n"
    ]
   },
   {
@@ -955,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "  \n",
     "### 📝 Conclusion:\n",
     "- 💸 There are 24 missing values in the income column.\n",
@@ -994,7 +990,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "\n",
     "### 🔍 Key Observations:\n",
     "- 📈 No missing values in the data.\n",
@@ -1008,11 +1004,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">🔍</span> 3. Explore Data\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    🔍 3. Explore Data\n",
+    "</h2>\n"
    ]
   },
   {
@@ -1055,7 +1049,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "\n",
     "### Customer Age Group Breakdown:\n",
     "\n",
@@ -1116,7 +1110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;;\">\n",
     "\n",
     "### ✨ Breakdown of Customer Education Levels:\n",
     "\n",
@@ -1176,7 +1170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "\n",
     "### ✨Breakdown of Customer Marital Status:\n",
     "\n",
@@ -1232,7 +1226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;;\">\n",
     "\n",
     "### 💰 Income Distribution Summary\n",
     "\n",
@@ -2214,9 +2208,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;;\">\n",
     "\n",
-    "# 📊 Distribution of Spending Across Product Categories\n",
+    "## 📊 Distribution of Spending Across Product Categories\n",
     "\n",
     "This bar chart illustrates the distribution of spending across different product categories based on accepted campaigns.\n",
     "\n",
@@ -3155,9 +3149,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "\n",
-    "# 📊 Distribution of Purchases and Web Visits across Product Categories\n",
+    "## 📊 Distribution of Purchases and Web Visits across Product Categories\n",
     "\n",
     "This donut chart displays the distribution of various purchase and visit types, offering insight into customer behavior across different channels.\n",
     "\n",
@@ -3208,9 +3202,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "\n",
-    "# 🔥 Heatmap of Response vs Complain\n",
+    "## 🔥 Heatmap of Response vs Complain\n",
     "\n",
     "This heatmap illustrates the interaction between customer complaints and the response they received.\n",
     "\n",
@@ -3268,7 +3262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "\n",
     "### Spending Breakdown by Category:\n",
     "\n",
@@ -3293,11 +3287,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">🚫</span> 4. Remove Outliers & Feature Engineering\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    🚫 4. Remove Outliers & Feature Engineering\n",
+    "</h2>\n"
    ]
   },
   {
@@ -3889,11 +3881,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">⚙️</span> 5. DATA PREPROCESSING\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    ⚙️ 5. DATA PREPROCESSING\n",
+    "</h2>"
    ]
   },
   {
@@ -4097,11 +4087,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">⬇️</span> 6. DIMENSIONALITY REDUCTION\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    ⬇️ 6. DIMENSIONALITY REDUCTION\n",
+    "</h2>\n"
    ]
   },
   {
@@ -4236,11 +4224,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">🧩</span> 7. CLUSTERING\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    🧩 7. CLUSTERING\n",
+    "</h2>\n"
    ]
   },
   {
@@ -11865,7 +11851,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 20px; border-radius: 10px; background-color: #1E1E1E; color: #E0E0E0; font-size: 1em;;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "\n",
     "### Customer Clusters Analysis:\n",
     "\n",
@@ -11894,11 +11880,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">📊</span> 8. EVALUATING MODELS\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    📊 8. EVALUATING MODELS\n",
+    "</h2>\n"
    ]
   },
   {
@@ -12051,18 +12035,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">📝</span> 9. CONCLUSION\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    📝 9. CONCLUSION\n",
+    "</h2>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 2px solid #4CAF50; border-radius: 10px; padding: 15px;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "\n",
     "### Project Summary: Unsupervised Clustering Analysis\n",
     "\n",
