--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; text-align:center;\">\n",
-    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\"></span> Customer Segmentation\n",
-    "    </h2>\n",
-    "</div>\n"
+    "<h2 style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold;\">\n",
+    "    Customer Segmentation\n",
+    "</h2>\n"
    ]
   },
   {
