--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 📊 **About Dataset**\n",
+    "## 📊 **About Dataset**\n",
     "\n",
     "### 🌐 **Context**\n",
     "### 📝 Problem Statement\n",
