--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -1108,7 +1108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;;\">\n",
+    "<div style=\"border: 2px solid #FF8343; border-radius: 10px; padding: 15px;\">\n",
     "\n",
     "### ✨ Breakdown of Customer Education Levels:\n",
     "\n",
