--- a/Mushroom_cleaned/mushroom.ipynb
+++ b/Mushroom_cleaned/mushroom.ipynb
@@ -1,11 +1,86 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🍄 Mushroom Dataset for Binary Classification\n",
+    "\n",
+    "## 📝 About the Dataset\n",
+    "This dataset is a **cleaned version** of the original Mushroom Dataset available at the **UCI Machine Learning Repository**. It has been preprocessed using advanced cleaning techniques to enhance usability and performance for binary classification tasks.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🛠️ Cleaning Techniques Applied\n",
+    "- 🧹 **Modal Imputation**: Handling missing values by replacing them with the most frequent value.\n",
+    "- 🔄 **One-Hot Encoding**: Converting categorical variables into numerical form.\n",
+    "- 📊 **Z-Score Normalization**: Standardizing numerical columns.\n",
+    "- ✂️ **Feature Selection**: Retaining only the most important attributes.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📋 Dataset Features\n",
+    "The dataset includes **9 columns**:\n",
+    "\n",
+    "1. **Cap Diameter** 🌐  \n",
+    "   - The diameter of the mushroom cap.\n",
+    "\n",
+    "2. **Cap Shape** 🍂  \n",
+    "   - The shape of the mushroom cap.\n",
+    "\n",
+    "3. **Gill Attachment** 🪶  \n",
+    "   - How the gills are attached to the mushroom cap.\n",
+    "\n",
+    "4. **Gill Color** 🌈  \n",
+    "   - The color of the gills.\n",
+    "\n",
+    "5. **Stem Height** 📏  \n",
+    "   - The height of the mushroom stem.\n",
+    "\n",
+    "6. **Stem Width** 📐  \n",
+    "   - The width of the mushroom stem.\n",
+    "\n",
+    "7. **Stem Color** 🎨  \n",
+    "   - The color of the mushroom stem.\n",
+    "\n",
+    "8. **Season** 🗓️  \n",
+    "   - The season in which the mushroom is found.\n",
+    "\n",
+    "9. **Target Class** 🎯  \n",
+    "   - Indicates if the mushroom is edible or poisonous:\n",
+    "     - **0**: Edible 🍽️  \n",
+    "     - **1**: Poisonous ☠️  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🌟 Key Highlights\n",
+    "- The dataset is suitable for **binary classification tasks**.  \n",
+    "- Pre-cleaned for easy model training and analysis.  \n",
+    "- Aimed at distinguishing between edible and poisonous mushrooms.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "✨ **Happy Exploring and Modeling!** 🚀\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **About the author:** Sajjad Ali Shah\n",
+    "- **LinkedIn:** [LinkedIn Profile](https://www.linkedin.com/in/sajjad-ali-shah47/)\n",
+    "- **Dataset link:** [Mushroom Dataset (Binary Classification)](https://www.kaggle.com/datasets/prishasawhney/mushroom-dataset/data)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing the libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,11 +90,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df=pd.read_csv(\"./dataset/mushroom_cleaned.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cap-diameter</th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>gill-attachment</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>stem-height</th>\n",
+       "      <th>stem-width</th>\n",
+       "      <th>stem-color</th>\n",
+       "      <th>season</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1372</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.807467</td>\n",
+       "      <td>1545</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.804273</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1461</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.807467</td>\n",
+       "      <td>1557</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.804273</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1371</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.612496</td>\n",
+       "      <td>1566</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.804273</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1261</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.787572</td>\n",
+       "      <td>1566</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.804273</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.711971</td>\n",
+       "      <td>1464</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.943195</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cap-diameter  cap-shape  gill-attachment  gill-color  stem-height  \\\n",
+       "0          1372          2                2          10     3.807467   \n",
+       "1          1461          2                2          10     3.807467   \n",
+       "2          1371          2                2          10     3.612496   \n",
+       "3          1261          6                2          10     3.787572   \n",
+       "4          1305          6                2          10     3.711971   \n",
+       "\n",
+       "   stem-width  stem-color    season  class  \n",
+       "0        1545          11  1.804273      1  \n",
+       "1        1557          11  1.804273      1  \n",
+       "2        1566          11  1.804273      1  \n",
+       "3        1566          11  1.804273      1  \n",
+       "4        1464          11  0.943195      1  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
