--- a/Mushroom_cleaned/mushroom.ipynb
+++ b/Mushroom_cleaned/mushroom.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"intro\"></a>\n",
+    "<div style=\"background-color:#7E60BF; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">🍄</span>  Mushroom Classification \n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 🍄 Mushroom Dataset for Binary Classification\n",
     "\n",
     "## 📝 About the Dataset\n",
@@ -72,6 +84,18 @@
     "- **Dataset link:** [Mushroom Dataset (Binary Classification)](https://www.kaggle.com/datasets/prishasawhney/mushroom-dataset/data)\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"intro\"></a>\n",
+    "<div style=\"background-color:#7E60BF; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">🍄</span>  Importing libraries\n",
+    "    </h2>\n",
+    "</div>\n"
    ]
   },
   {
