--- a/Mushroom_cleaned/mushroom.ipynb
+++ b/Mushroom_cleaned/mushroom.ipynb
@@ -346,7 +346,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Explore the data\n"
+    "<a id=\"intro\"></a>\n",
+    "<div style=\"background-color:#7E60BF; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">🍄</span>  Explore the data\n",
+    "    </h2>\n",
+    "</div>\n"
    ]
   },
   {
@@ -617,6 +622,18 @@
     "\n",
     "# Generate descriptive statistics for the z-scores\n",
     "z_scores.describe().round(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"intro\"></a>\n",
+    "<div style=\"background-color:#7E60BF; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">🍄</span>  Outliers \n",
+    "    </h2>\n",
+    "</div>\n"
    ]
   },
   {
@@ -894,7 +911,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Machiine learning"
+    "<a id=\"intro\"></a>\n",
+    "<div style=\"background-color:#7E60BF; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">🍄</span> Machine learning\n",
+    "</div>\n"
    ]
   },
   {
