--- a/Mushroom_cleaned/mushroom.ipynb
+++ b/Mushroom_cleaned/mushroom.ipynb
@@ -935,7 +935,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lets Scale the data"
+    "<a id=\"intro\"></a>\n",
+    "<div style=\"background-color:#7E60BF; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">🍄</span> Lets Scale the data\n",
+    "</div>\n"
    ]
   },
   {
@@ -1917,6 +1921,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"intro\"></a>\n",
+    "<div style=\"background-color:#7E60BF; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">🍄</span> End\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
