--- a/Heart Dieases Project/Heart_disease.ipynb
+++ b/Heart Dieases Project/Heart_disease.ipynb
@@ -20,12 +20,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![My Image](DES.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Title: Heart Disease Prediction\n",
-    "`Author`: Sajjad Ali Shah\\\n",
-    "`Git hub`: \\\n",
-    "`Contact`: [Linkedin](www.linkedin.com/in/sajjad-ali-shah-120341305)\\\n",
-    "`Date`: 7 July 2024\\\n",
-    "`Dataset`: [Heart Disease URL](https://www.kaggle.com/datasets/redwankarimsony/heart-disease-data?resource=download)\n"
+    "- **About the author:** Sajjad Ali Shah\n",
+    "- **LinkedIn:** [LinkedIn Profile](https://www.linkedin.com/in/sajjad-ali-shah47/)\n",
+    "- **Dataset**: [Heart Disease URL](https://www.kaggle.com/datasets/redwankarimsony/heart-disease-data?resource=download)\n"
    ]
   },
   {
@@ -88,13 +93,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the libraries\n",
-    "Lets the project my importing all the libraries\n"
+    "<a id=\"data\"></a>\n",
+    "<div style=\"background-color:#47663B; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">📚</span> 1. Import Necessary Libraries\n",
+    "    </h2>\n",
+    "</div>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,12 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Load the data from csv file placed locally in our pc\n",
-    "df=pd.read_csv(\"Heart_disease_uci.csv\")"
+    "df=pd.read_csv(\"./dataset/Heart_disease_uci.csv\")"
    ]
   },
   {
@@ -20789,7 +20798,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "MLD",
    "language": "python",
    "name": "python3"
   },
@@ -20803,7 +20812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
