--- a/Heart Dieases Project/Heart_disease.ipynb
+++ b/Heart Dieases Project/Heart_disease.ipynb
@@ -141,7 +141,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the dataset"
+    "\n",
+    "<a id=\"data\"></a>\n",
+    "<div style=\"background-color:#47663B; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h3 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\">📚</span> Load the dataset\n",
+    "    </h3>\n",
+    "</div>\n"
    ]
   },
   {
