--- a/Diabetes Classification/diabetes.ipynb
+++ b/Diabetes Classification/diabetes.ipynb
@@ -734,6 +734,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"ML\"></a>\n",
+    "<div style=\"background-color:#229799; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
+    "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
+    "        <span style=\"font-size:25px;\"></span> Machine Learning\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 129,
    "metadata": {},
