--- a/Diabetes Classification/diabetes.ipynb
+++ b/Diabetes Classification/diabetes.ipynb
@@ -34,10 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
