--- a/Diabetes Classification/diabetes.ipynb
+++ b/Diabetes Classification/diabetes.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,10 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Load the data\n",
     "df=pd.read_csv(\"./dataset/diabetes.csv\")"
    ]
   },
