--- a/Diabetes Classification/diabetes.ipynb
+++ b/Diabetes Classification/diabetes.ipynb
@@ -1216,10 +1216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save the model\n",
     "import pickle\n",
     "pickle.dump(classifier, open('diabetes-prediction-rfc-model.pkl', 'wb'))"
    ]
