--- a/Customer Personality Analysis/cust_personality_analysis.ipynb
+++ b/Customer Personality Analysis/cust_personality_analysis.ipynb
@@ -1011,7 +1011,7 @@
     "<a id=\"data\"></a>\n",
     "<div style=\"background-color:#C40C0C; padding:10px; border-radius:8px; color:white; text-align:center; font-weight:bold; margin:0;\">\n",
     "    <h2 style=\"color:white; font-weight:bold; margin:0;\">\n",
-    "        <span style=\"font-size:25px;\">🔍</span> 3. Explore Dat\n",
+    "        <span style=\"font-size:25px;\">🔍</span> 3. Explore Data\n",
     "    </h2>\n",
     "</div>\n"
    ]
