--- a/Mushroom_cleaned/mushroom.ipynb
+++ b/Mushroom_cleaned/mushroom.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,10 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load dataset\n",
     "df=pd.read_csv(\"./dataset/mushroom_cleaned.csv\")"
    ]
   },
